--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
     "require": {
         "php": ">=5.3.3",
         "guzzle/guzzle": "v3.8.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "": "src/"
+        }
     }
 }
