curl default options

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,10 @@
         {
             "name": "Ryo Fukumuro",
             "email": "rkworks@o0o.co"
+        },
+        {
+            "name": "Yuichi Ochiai",
+            "email": "ochiai@cstap.com"
         }
     ],
     "require": {
